pop-up box 08-12

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,26 @@ B. Helpers
 ***********************************************************************************************************************/
 
 /*-------------------------------------------
+  -- PopUp
+-------------------------------------------*/
+
+/*@media (min-width: 993px){
+.w3-modal-content {
+    width: 500px;
+}
+
+.w3-modal-content {
+    margin: auto;
+    background-color: #ffffff;
+    position: relative;
+    padding: 0;
+    outline: 0;
+    width: 500px;
+}
+*/
+
+
+/*-------------------------------------------
   -- Animations
 -------------------------------------------*/
 
