--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1536,14 +1536,18 @@ ul.ts-list-divided li:last-child {
 
 #loading{
     position: fixed;
+    height:1500px;
     width: 1500px;
-    height: 1500px;
-    background: #fff
-    top:0;
+/*    background: #1C1A1A;
+*/    top:50%;
     left:50%;
     transform: translate(-50%,-50%);
-    z-index: 9999;
+    z-index:9999;
     align-items: center;
+    opacity: 1;
+    margin: auto;
+
+
     /*url('http://garudapr.in/wp-content/uploads/2017/12/loader.gif')
      no-repeat center center;   
     z-index: 99999;*/
