--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1538,15 +1538,16 @@ ul.ts-list-divided li:last-child {
     position: fixed;
     height:100%;
     width: 100%;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+    top:0;
+    left:35%;
+/*    transform: translate(-50%,-50%);
+*/  transform: scale(1);
     z-index:9999;
     align-items: center;
     opacity: 1;
     margin: auto;
-    transition: 1s ease;
-
+/*    transition: 0.5s ease;
+*/
 
     /*url('http://garudapr.in/wp-content/uploads/2017/12/loader.gif')
      no-repeat center center;   
