--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1539,12 +1539,14 @@ ul.ts-list-divided li:last-child {
     height:100%;
     width: 100%;
     top:0;
-    left:50%;
+    bottom: 0;
+    left: 0;
+    right: 0;
     transform: scale(2);
     z-index:9999;
-    align-items: center;
     opacity: 1;
     margin: auto;
+    align-items: center;
 
 
     /*url('http://garudapr.in/wp-content/uploads/2017/12/loader.gif')
