--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1566,7 +1566,7 @@ body.has-loading-screen:before {
     transition: 1.5s ease;
     opacity: 1;
     align-items: center;
-    background-repeat: no-repeat;
+    background-repeat: n0-repeat;
 
 }
 
